--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       - TZ=Asia/Shanghai
       - PREFER_HOST_MODE=hostname
       - MODE=standalone
-#    healthcheck:
-#      test: "/bin/netstat -anp | grep 8848 && exit 0 || exit 1"
-#      interval: 10s
-#      timeout: 5s
-#      retries: 5
+    healthcheck:
+      test: "/bin/netstat -anp | grep 8848 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
     labels:
       NAME: "nacos"
   mysql:
@@ -39,8 +39,34 @@ services:
       - "${DOCKER_VOL_DIR}/mysql/data:/var/lib/mysql"
       - "${DOCKER_VOL_DIR}/mysql/conf:/etc/mysql/conf.d"
       - "${DOCKER_VOL_DIR}/mysql/logs:/logs"
+    healthcheck:
+      test: "/bin/netstat -anp | grep 3306 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
     labels:
       NAME: "mysql"
+  nginx:
+    image: "nginx:1.17.5"
+    container_name: nginx
+    networks:
+      - infra
+    ports:
+      - "80:80"
+    environment:
+      - TZ=Asia/Shanghai
+    healthcheck:
+      test: "/bin/netstat -anp | grep 80 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
+    labels:
+      NAME: "nginx"
+    volumes:
+      - "${DOCKER_VOL_DIR}/nginx/logs:/var/log/nginx"
+      - "${DOCKER_VOL_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "${DOCKER_VOL_DIR}/nginx/conf.d:/etc/nginx/conf.d"
+      - "${DOCKER_VOL_DIR}/nginx/html:/usr/share/nginx/html"
   rabbitmq:
     image: "rabbitmq:3.7-management"
     container_name: rabbitmq
@@ -60,6 +86,11 @@ services:
       - RABBITMQ_DEFAULT_VHOST=/
     volumes:
       - "${DOCKER_VOL_DIR}/rabbitmq/lib:/var/rabbitmq/lib"
+    healthcheck:
+      test: "/bin/netstat -anp | grep 5672 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
     labels:
       NAME: "rabbitmq"
   redis:
@@ -75,6 +106,11 @@ services:
     command: redis-server --requirepass 123456
     environment:
       - TZ=Asia/Shanghai
+    healthcheck:
+      test: "/bin/netstat -anp | grep 6379 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
     labels:
       NAME: "redis"
   hippo:
@@ -104,7 +140,12 @@ services:
     command:
       - /bin/sh
       - -c
-      - java -DXms128m -DXmx512m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+      - java -DXms256m -DXmx768m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+    healthcheck:
+      test: "/bin/netstat -anp | grep 8223 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
   owl:
     image: cloud/cloud-owl:1.1.0-SNAPSHOT
     container_name: owl
@@ -129,7 +170,12 @@ services:
     command:
       - /bin/sh
       - -c
-      - java -DXms128m -DXmx512m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+      - java -DXms256m -DXmx512m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+    healthcheck:
+      test: "/bin/netstat -anp | grep 7211 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
   spider:
     image: cloud/cloud-spider:1.1.0-SNAPSHOT
     container_name: spider
@@ -154,7 +200,12 @@ services:
     command:
       - /bin/sh
       - -c
-      - java -DXms128m -DXmx512m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+      - java -DXms256m -DXmx768m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+    healthcheck:
+      test: "/bin/netstat -anp | grep 8888 && exit 0 || exit 1"
+      interval: 15s
+      timeout: 5s
+      retries: 128
 
 networks:
   #基础设施层网络
