--- a/docs/infrastructure/nginxconfig/conf.d/default.conf
+++ b/docs/infrastructure/nginxconfig/conf.d/default.conf
@@ -9,8 +9,8 @@ server {
     server_name  smart4y.com;
 
     #ssl on;
-    ssl_certificate  /opt/cert/smart4y.com_nginx/1814235_smart4y.com.pem;   
-    ssl_certificate_key /opt/cert/smart4y.com_nginx/1814235_smart4y.com.key; 
+    ssl_certificate  ./cert/smart4y.com_nginx/1814235_smart4y.com.pem;
+    ssl_certificate_key ./cert/smart4y.com_nginx/1814235_smart4y.com.key;
     ssl_session_timeout 5m;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
@@ -18,26 +18,15 @@ server {
 
     #默认目录
     location / {
-        root   /opt/www/html;
+        root   /usr/share/nginx/html;
         index  index.html;
     }
 
     ##vue二级目录代理
     location /admin {
-        alias /opt/www/admin;
+        alias   /usr/share/nginx/admin;
         index  index.html;
         try_files $uri $uri/ /index.html last;
-    }
-
-    #docker网关代理
-    location /docker {
-        rewrite  ^/api/(.*)$ /$1 break;
-        proxy_pass 127.0.0.1:2375;
-        proxy_set_header Host $host;
-        proxy_set_header User-Agent $http_user_agent;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header authorization $http_authorization;
     }
 
     #error_page  404              /404.html;
