--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       - infra
     ports:
       - "80:80"
+      - "443:443"
+    restart: always
     environment:
       - TZ=Asia/Shanghai
     healthcheck:
@@ -63,10 +65,13 @@ services:
     labels:
       NAME: "nginx"
     volumes:
-      - "${DOCKER_VOL_DIR}/nginx/logs:/var/log/nginx"
-      - "${DOCKER_VOL_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "/etc/localtime:/etc/localtime:ro"
       - "${DOCKER_VOL_DIR}/nginx/conf.d:/etc/nginx/conf.d"
+      - "${DOCKER_VOL_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "${DOCKER_VOL_DIR}/nginx/cert:/etc/nginx/cert"
       - "${DOCKER_VOL_DIR}/nginx/html:/usr/share/nginx/html"
+      - "${DOCKER_VOL_DIR}/nginx/admin:/usr/share/nginx/admin"
+      - "${DOCKER_VOL_DIR}/nginx/logs:/var/log/nginx"
   rabbitmq:
     image: "rabbitmq:3.7-management"
     container_name: rabbitmq
