--- a/docs/infrastructure/nginxconfig/conf.d/api.conf
+++ b/docs/infrastructure/nginxconfig/conf.d/api.conf
@@ -9,8 +9,8 @@ server {
     server_name  api.smart4y.com;
 
     #ssl on;
-    ssl_certificate  /opt/cert/api.smart4y.com_nginx/1814587_api.smart4y.com.pem;   
-    ssl_certificate_key /opt/cert/api.smart4y.com_nginx/1814587_api.smart4y.com.key; 
+    ssl_certificate     ./cert/api.smart4y.com_nginx/1814587_api.smart4y.com.pem;
+    ssl_certificate_key ./cert/api.smart4y.com_nginx/1814587_api.smart4y.com.key;
     ssl_session_timeout 5m;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
@@ -18,7 +18,7 @@ server {
 
     #默认目录
     location / {
-        proxy_pass   http://127.0.0.1:8081;
+        proxy_pass   http://127.0.0.1:8888;
 
         proxy_set_header Host $host;
         proxy_set_header User-Agent $http_user_agent;
