--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   nacos:
-    image: nacos/nacos-server:latest
+    image: nacos/nacos-server:1.1.3
     container_name: nacos
     networks:
       - infra
@@ -39,7 +39,7 @@ services:
       - "${DOCKER_VOL_DIR}/mysql/conf:/etc/mysql/conf.d"
       - "${DOCKER_VOL_DIR}/mysql/logs:/logs"
     healthcheck:
-      test: mysqladmin ping -h localhost -p$$MYSQL_ROOT_PASSWORD && test '0' -eq $$(ps aux | awk '{print $$11}' | grep -c -e '^mysql$$')
+      test: "mysqladmin ping -h localhost -p$$MYSQL_ROOT_PASSWORD && test '0' -eq $$(ps aux | awk '{print $$11}' | grep -c -e '^mysql$$')"
       interval: 15s
       timeout: 5s
       retries: 128
@@ -65,7 +65,7 @@ services:
       - "${DOCKER_VOL_DIR}/nginx/admin:/usr/share/nginx/admin"
       - "${DOCKER_VOL_DIR}/nginx/logs:/var/log/nginx"
     healthcheck:
-      test: "/bin/netstat -anp | grep 80 && exit 0 || exit 1"
+      test: "service nginx status || exit 1"
       interval: 15s
       timeout: 5s
       retries: 128
@@ -91,7 +91,7 @@ services:
     volumes:
       - "${DOCKER_VOL_DIR}/rabbitmq/lib:/var/rabbitmq/lib"
     healthcheck:
-      test: "/bin/netstat -anp | grep 5672 && exit 0 || exit 1"
+      test: "rabbitmqctl eval '{ true, rabbit_app_booted_and_running } = { rabbit:is_booted(node()), rabbit_app_booted_and_running }, { [], no_alarms } = { rabbit:alarms(), no_alarms }, [] /= rabbit_networking:active_listeners(), rabbitmq_node_is_healthy. ' || exit 1"
       interval: 15s
       timeout: 5s
       retries: 128
@@ -111,7 +111,7 @@ services:
     environment:
       - TZ=Asia/Shanghai
     healthcheck:
-      test: "/bin/netstat -anp | grep 6379 && exit 0 || exit 1"
+      test: "redis-cli -h 127.0.0.1 ping && exit 0 || exit 1"
       interval: 15s
       timeout: 5s
       retries: 128
