--- a/docs/infrastructure/mysql.yml
+++ b/docs/infrastructure/mysql.yml
@@ -20,7 +20,7 @@ services:
       - "${DOCKER_VOL_DIR}/mysql/conf:/etc/mysql/conf.d"
       - "${DOCKER_VOL_DIR}/mysql/logs:/logs"
     healthcheck:
-      test: mysqladmin ping -h localhost -p$$MYSQL_ROOT_PASSWORD && test '0' -eq $$(ps aux | awk '{print $$11}' | grep -c -e '^mysql$$')
+      test: "mysqladmin ping -h localhost -p$$MYSQL_ROOT_PASSWORD && test '0' -eq $$(ps aux | awk '{print $$11}' | grep -c -e '^mysql$$')"
       interval: 15s
       timeout: 5s
       retries: 128
