--- a/docs/infrastructure/rabbitmq.yml
+++ b/docs/infrastructure/rabbitmq.yml
@@ -20,7 +20,7 @@ services:
     volumes:
       - "${DOCKER_VOL_DIR}/rabbitmq/lib:/var/rabbitmq/lib"
     healthcheck:
-      test: "/bin/netstat -anp | grep 5672 && exit 0 || exit 1"
+      test: "rabbitmqctl eval '{ true, rabbit_app_booted_and_running } = { rabbit:is_booted(node()), rabbit_app_booted_and_running }, { [], no_alarms } = { rabbit:alarms(), no_alarms }, [] /= rabbit_networking:active_listeners(), rabbitmq_node_is_healthy. ' || exit 1"
       interval: 15s
       timeout: 5s
       retries: 128
