--- a/docs/ymls/aliyun/hippo.yml
+++ b/docs/ymls/aliyun/hippo.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-  owl:
-    image: registry.cn-hangzhou.aliyuncs.com/smart4y/cloud-owl:1.0.0
-    container_name: owl
+  hippo:
+    image: registry.cn-hangzhou.aliyuncs.com/smart4y/cloud-hippo:1.0.0
+    container_name: hippo
     networks:
       - infra
       - cloud
     ports:
-      - "7211:7211"
+      - "8223:8223"
     environment:
       - NACOS_HOST=nacos
       - DB_HOST=mysql
@@ -17,16 +17,14 @@ services:
       - RABBITMQ_HOST=rabbitmq
       - spring.profiles.active=docker
     volumes:
-      - "${DOCKER_VOL_DIR}/cloud-owl/logs:/logs/cloud-owl"
-    depends_on:
-      - hippo
-    entrypoint: "/wait-for-it.sh -t 0 hippo:8223 --"
+      - "${DOCKER_VOL_DIR}/cloud-hippo/logs:/logs/cloud-hippo"
+    entrypoint: "/wait-for-it.sh -t 0 nacos:8848 --"
     command:
       - /bin/sh
       - -c
-      - java -DXms256m -DXmx512m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+      - java -DXms256m -DXmx768m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
     healthcheck:
-      test: "/bin/netstat -anp | grep 7211 && exit 0 || exit 1"
+      test: "/bin/netstat -anp | grep 8223 && exit 0 || exit 1"
       interval: 15s
       timeout: 5s
       retries: 128
