--- a/docs/ymls/aliyun/spider.yml
+++ b/docs/ymls/aliyun/spider.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-  hippo:
-    image: registry.cn-hangzhou.aliyuncs.com/smart4y/cloud-hippo:1.0.0
-    container_name: hippo
+  spider:
+    image: registry.cn-hangzhou.aliyuncs.com/smart4y/cloud-spider:1.0.0
+    container_name: spider
     networks:
       - infra
       - cloud
     ports:
-      - "8223:8223"
+      - "8888:8888"
     environment:
       - NACOS_HOST=nacos
       - DB_HOST=mysql
@@ -17,19 +17,14 @@ services:
       - RABBITMQ_HOST=rabbitmq
       - spring.profiles.active=docker
     volumes:
-      - "${DOCKER_VOL_DIR}/cloud-hippo/logs:/logs/cloud-hippo"
-    depends_on:
-      - nacos
-      - mysql
-      - redis
-      - rabbitmq
-    entrypoint: "/wait-for-it.sh -t 0 nacos:8848 --"
+      - "${DOCKER_VOL_DIR}/cloud-spider/logs:/logs/cloud-spider"
+    entrypoint: "/wait-for-it.sh -t 0 owl:7211 --"
     command:
       - /bin/sh
       - -c
       - java -DXms256m -DXmx768m -Djava.security.egd=file:/dev/./urandom -jar /app.jar
     healthcheck:
-      test: "/bin/netstat -anp | grep 8223 && exit 0 || exit 1"
+      test: "/bin/netstat -anp | grep 8888 && exit 0 || exit 1"
       interval: 15s
       timeout: 5s
       retries: 128
