--- a/docs/ymls/docker-compose-aliyun.yml
+++ b/docs/ymls/docker-compose-aliyun.yml
@@ -118,7 +118,7 @@ services:
     labels:
       NAME: "redis"
   hippo:
-    image: cloud/cloud-hippo:1.1.0-SNAPSHOT
+    image: registry.cn-hangzhou.aliyuncs.com/smart4y/cloud-hippo:1.0.0
     container_name: hippo
     networks:
       - infra
@@ -136,6 +136,7 @@ services:
     volumes:
       - "${DOCKER_VOL_DIR}/cloud-hippo/logs:/logs/cloud-hippo"
     depends_on:
+      - nginx
       - nacos
       - mysql
       - redis
@@ -151,7 +152,7 @@ services:
       timeout: 5s
       retries: 128
   owl:
-    image: cloud/cloud-owl:1.1.0-SNAPSHOT
+    image: registry.cn-hangzhou.aliyuncs.com/smart4y/cloud-owl:1.0.0
     container_name: owl
     networks:
       - infra
@@ -181,7 +182,7 @@ services:
       timeout: 5s
       retries: 128
   spider:
-    image: cloud/cloud-spider:1.1.0-SNAPSHOT
+    image: registry.cn-hangzhou.aliyuncs.com/smart4y/cloud-spider:1.0.0
     container_name: spider
     networks:
       - infra
