--- a/docs/infrastructure/nginxconfig/nginx.conf
+++ b/docs/infrastructure/nginxconfig/nginx.conf
@@ -9,7 +9,7 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -20,8 +20,31 @@ http {
 
     sendfile        on;
     #tcp_nopush     on;
+
     keepalive_timeout  65;
-    #gzip  on;
+
+    #开启或关闭gzip on off
+    gzip  on;
+
+    #不使用gzip IE6
+    gzip_disable "msie6";
+
+    #gzip压缩最小文件大小，超出进行压缩（自行调节）
+    gzip_min_length 100k;
+
+    #buffer
+    gzip_buffers 4 16k;
+
+    #压缩级别:1-10（数字越大压缩的越好时间也越长）
+    gzip_comp_level 3;
+
+    #压缩文件类型
+    gzip_types text/plain application/x-javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
+
+    #跟Squid等缓存服务有关，on的话会在Header里增加 "Vary: Accept-Encoding"
+    gzip_vary off;
+
+    underscores_in_headers on;
 
     include /etc/nginx/conf.d/*.conf;
 }
