前端路由修改

--- a/cloud-owl/pom.xml
+++ b/cloud-owl/pom.xml
@@ -100,10 +100,11 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-            <plugin>
+            <!-- TODO 若要发布新镜像则打开此插件 -->
+            <!--<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
