--- a/cloud-vue/package.json
+++ b/cloud-vue/package.json
@@ -12,42 +12,42 @@
   },
   "dependencies": {
     "@riophae/vue-treeselect": "0.0.38",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "clipboard": "^2.0.0",
-    "codemirror": "^5.44.0",
+    "codemirror": "^5.49.2",
     "countup": "^1.8.2",
-    "cropperjs": "^1.5.1",
+    "cropperjs": "^1.5.6",
     "crypto-js": "^3.1.9-1",
-    "dayjs": "^1.8.10",
-    "echarts": "^4.2.0-rc.2",
-    "highlight.js": "^9.15.6",
-    "html2canvas": "^1.0.0-alpha.12",
-    "iview": "^3.3.0",
+    "dayjs": "^1.8.16",
+    "echarts": "^4.4.0",
+    "highlight.js": "^9.15.10",
+    "html2canvas": "^1.0.0-rc.5",
+    "iview": "^3.5.1",
     "iview-area": "^1.5.17",
-    "js-cookie": "^2.2.0",
+    "js-cookie": "^2.2.1",
     "simplemde": "^1.11.2",
-    "sortablejs": "^1.8.4",
+    "sortablejs": "^1.10.1",
     "tree-table-vue": "^1.1.0",
     "vue": "^2.6.9",
-    "vue-i18n": "^8.9.0",
-    "vue-router": "^3.0.1",
-    "vuedraggable": "^2.19.2",
+    "vue-i18n": "^8.15.0",
+    "vue-router": "^3.1.3",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.0",
     "wangeditor": "^3.1.1",
-    "xlsx": "^0.14.1"
+    "xlsx": "^0.14.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.1",
-    "@vue/cli-plugin-eslint": "^3.5.1",
-    "@vue/cli-plugin-unit-mocha": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-unit-mocha": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.10",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "chai": "^4.1.2",
-    "eslint-plugin-cypress": "^2.2.1",
-    "less": "^3.9.0",
+    "eslint-plugin-cypress": "^2.7.0",
+    "less": "^3.10.3",
     "less-loader": "^4.0.5",
-    "lint-staged": "^8.1.5",
+    "lint-staged": "^8.2.1",
     "vue-template-compiler": "^2.6.9"
   },
   "browserslist": [
