--- a/cloud-spider/src/main/resources/application.yml
+++ b/cloud-spider/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/cloud?useSSL=false&useUnicode=true&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
-    password: 123456
+    password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
