--- a/cloud-vue/package.json
+++ b/cloud-vue/package.json
@@ -13,26 +13,26 @@
   "dependencies": {
     "@riophae/vue-treeselect": "0.0.38",
     "axios": "^0.18.1",
-    "clipboard": "^2.0.0",
-    "codemirror": "^5.49.2",
+    "clipboard": "^2.0.6",
+    "codemirror": "^5.56.0",
     "countup": "^1.8.2",
-    "cropperjs": "^1.5.6",
-    "crypto-js": "^3.1.9-1",
-    "dayjs": "^1.8.16",
-    "echarts": "^4.4.0",
-    "highlight.js": "^9.15.10",
+    "cropperjs": "^1.5.7",
+    "crypto-js": "^3.3.0",
+    "dayjs": "^1.8.29",
+    "echarts": "^4.8.0",
+    "highlight.js": "^9.18.1",
     "html2canvas": "^1.0.0-rc.5",
-    "view-design": "^4.0.2",
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.1",
     "simplemde": "^1.11.2",
-    "sortablejs": "^1.10.1",
+    "sortablejs": "^1.10.2",
     "tree-table-vue": "^1.1.0",
-    "vue": "^2.6.9",
-    "vue-i18n": "^8.15.0",
-    "vue-router": "^3.1.3",
-    "vuedraggable": "^2.23.2",
-    "vuex": "^3.1.0",
+    "view-design": "^4.3.2",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.18.2",
+    "vue-router": "^3.3.4",
+    "vuedraggable": "^2.24.0",
+    "vuex": "^3.5.1",
     "wangeditor": "^3.1.1",
     "xlsx": "^0.14.5"
   },
@@ -42,13 +42,13 @@
     "@vue/cli-plugin-unit-mocha": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
-    "eslint-plugin-cypress": "^2.7.0",
-    "less": "^3.10.3",
+    "eslint-plugin-cypress": "^2.11.1",
+    "less": "^3.12.2",
     "less-loader": "^4.0.5",
     "lint-staged": "^8.2.1",
-    "vue-template-compiler": "^2.6.9"
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
