--- a/docs/ymls/nacos.yml
+++ b/docs/ymls/nacos.yml
@@ -1,13 +1,15 @@
-version: '3'
+version: '3.2'
 services:
   nacos:
-    image: nacos/nacos-server:1.1.3
-    container_name: nacos
+    image: nacos/nacos-server:latest
+    container_name: "nacos"
+    labels:
+      NAME: "nacos"
+    hostname: "nacos"
     networks:
-      - infra
+      - sia
     ports:
       - "8848:8848"
-    restart: on-failure
     environment:
       - TZ=Asia/Shanghai
       - PREFER_HOST_MODE=hostname
@@ -17,8 +19,8 @@ services:
       interval: 15s
       timeout: 5s
       retries: 128
-    labels:
-      NAME: "nacos"
+    restart: on-failure
+
 networks:
-  #基础设施层网络
-  infra:
+  sia:
+    driver: bridge
