--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
                 <plugin>
                     <groupId>org.mybatis.generator</groupId>
                     <artifactId>mybatis-generator-maven-plugin</artifactId>
-                    <version>1.3.7</version>
+                    <version>1.4.0</version>
                     <configuration>
                         <configurationFile>${basedir}/src/main/resources/mybatis/generatorConfig.xml
                         </configurationFile>
@@ -152,7 +152,7 @@
                             <version>${project.version}</version>
                             <type>jar</type>
                         </dependency>
-                        <!-- 依赖业务模块 version:${project.version} type:jar -->
+                        <!-- 引入业务模块依赖 groupId:artifactId:version:${version} type:jar -->
                     </dependencies>
                 </plugin>
                 <!-- Docker镜像插件 -->
